<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_remote">Add Remote</string>
    <string name="address">Address</string>
    <string name="address_options">Address Options</string>
    <string name="address_unavailable">&lt;Address Unavailable&gt;</string>
    <string name="create_altitude_alert">Create Altitude Alert</string>
    <string name="altitude">Altitude</string>
    <string name="app_trip">Trip Details</string>
    <string name="app_location">Location Details</string>
    <string name="app_waypoint">Hotspot Detail</string>
    <string name="app_name">Where Were We?</string>
    <string name="audio_header">Audio:</string>
    <string name="audio_captured">Audio recording captured.</string>
    <string name="backup_db">Backup Trips</string>
    <string name="bytes">Bytes</string>
    <string name="cancel">Cancel</string>
    <string name="compass_options">Compass Options</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_question">Are you sure you want to delete?</string>
    <string name="confirm_refresh">Confirm Refresh</string>
    <string name="coordinates_unavailable">&lt;Coordinates Unavailable&gt;</string>
	<string name="delete">Delete</string>
    <string name="delete_trip">Remove Trip</string>
    <string name="delete_waypoint">Remove Hotspot</string>
    <string name="details">Details</string>
    <string name="end_date">End Date</string>
    <string name="err_cannot_change_orientation">Image saved but could not correct the orientation.</string>
    <string name="err_cannot_read_file">An error occurred and the file cannot be read from the SD card.</string>
    <string name="err_cannot_write_file">An error occurred and the file cannot be written to the SD card.</string>
    <string name="exif_information">Exif Information</string>
    <string name="fetch_address">Fetch Address</string>
    <string name="fetch_coordinates">Fetch Coordinates</string>
    <string name="file_label">File:</string>
    <string name="file_deleted">The file was deleted</string>
    <string name="file_not_deleted">The file was not deleted due to an unexpected error.</string>
    <string name="hide_compass">Hide Compass</string>
    <string name="hide_navigator">Hide Navigator</string>
    <string name="image_gallery">ImageGallery</string>
    <string name="image_header">Image:</string>
    <string name="import_label">Import</string>
    <string name="import_media">Import Media</string>
    <string name="kb">Kb</string>
	<string name="label_flash">Flash:</string>
	<string name="label_length">Length:</string>
	<string name="label_datetime">Datetime:</string>
	<string name="label_make">Make:</string>
	<string name="label_model">Model:</string>
	<string name="label_latitude">Latitude:</string>
	<string name="label_latitude_ref">Latitude Ref:</string>
	<string name="label_longitude">Longitude:</string>
	<string name="label_longitude_ref">Longitude Ref:</string>
	<string name="label_orientation">Orientation:</string>
	<string name="label_white_balance">White Balance:</string>
	<string name="label_width">Width:</string>
    <string name="larger">Larger</string>
    <string name="latitude">Latitude</string>
    <string name="launch_new_trip">Launch New Trip</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="location_notes">Location Notes</string>
    <string name="location_options">Location Options</string>
    <string name="location_refreshed">The location has been updated</string>
    <string name="locations">Locations</string>
    <string name="log_no_location_for_sensor">The Navigator is disabled until the location can be determined.</string>
    <string name="maintain">Maintain</string>
    <string name="main_html">Hello<br/>This is Line 2<br/>Now, Line 3<br/></string>
    <string name="main_trip">Trip:</string>
    <string name="this_is_new_location">This is a new location</string>
    <string name="map">Map</string>
    <string name="map_detail">MapDetail</string>
    <string name="map_mode">Map Mode</string>
    <string name="mb">Mb</string>
    <string name="media_fail">Media not saved.</string>
    <string name="media_library">Media Library</string>
    <string name="modified_label">Modified:</string>
    <string name="more">More</string>
    <string name="move_location">Move Location</string>
    <string name="mylocation">My Location</string>
    <string name="name">Name</string>
    <string name="navigator_options">Navigator Options</string>
    <string name="navigate_to_location">Navigate To Location</string>
    <string name="new_item">New</string>
    <string name="no">No</string>
    <string name="no_address_to_lookup">&lt;No Address to Look Up&gt;</string>
    <string name="no_items">No Items</string>
    <string name="no_backup_file_found">No backup file was found on the SD card.</string>
    <string name="notes">Notes</string>
    <string name="ok">OK</string>
    <string name="open_other">Open Other</string>
    <string name="options">Options</string>
    <string name="path_label">Path:</string>
    <string name="photo_captured">Photo captured.</string>
    <string name="preferences">Preferences</string>
    <string name="preference_settings">Settings</string>
    <string name="preference_compass_size_default">4</string>
    <string name="preference_compass_size_dialog_title">Compass Size</string>
    <string name="preference_compass_size_summary">Set the compass size</string>
    <string name="preference_compass_size_title">Compass Size</string>
    <string name="preference_compass_visible_default">Yes</string>
    <string name="preference_compass_visible_dialog_title">Show Compass on Map</string>
    <string name="preference_compass_visible_summary">Show the compass when the map is displayed</string>
    <string name="preference_compass_visible_title">Show Compass</string>
    <string name="preference_coordinate_default">decimal</string>
    <string name="preference_coordinate_dialog_title">Coordinate Format</string>
    <string name="preference_coordinate_summary">Enter the coordinate form to use</string>
    <string name="preference_coordinate_title">Coordinate Format</string>
    <string name="preference_measurement_default">Metric</string>
    <string name="preference_measurement_dialog_title">Measurement Units</string>
    <string name="preference_measurement_summary">Enter the measurement units to use</string>
    <string name="preference_measurement_title">Measurement Units</string>
    <string name="preference_navigator_size_default">4</string>
    <string name="preference_navigator_size_dialog_title">Navigator Size</string>
    <string name="preference_navigator_size_summary">Set the navigator size</string>
    <string name="preference_navigator_size_title">Navigator Size</string>
    <string name="preference_navigator_visible_default">Yes</string>
    <string name="preference_navigator_visible_dialog_title">Show Navigator on Map</string>
    <string name="preference_navigator_visible_summary">Show the Navigator when the map is displayed</string>
    <string name="preference_navigator_visible_title">Show Navigator</string>
    <string name="prop_directory">Directory</string>
    <string name="properties">Properties</string>
    <string name="refresh_current_location">Refresh current location</string>
    <string name="refresh_position">Refresh Position</string>
    <string name="refresh_waypoint">Refresh the location of this hotspot?</string>
    <string name="remove">Remove</string>
    <string name="remove_locations">Remove Locations</string>
    <string name="remove_trips">Remove Trips</string>
    <string name="restore_db">Restore Backup</string>
    <string name="retrieving_current_location">Retrieving the current location</string>
	<string name="rotate_left">Rotate Left</string>
	<string name="rotate_right">Rotate Right</string>
	<string name="rotating_image">Rotating the image</string>
    <string name="satellite">Satellite</string>
    <string name="select_a_trip">Select A Trip</string>
    <string name="select_locations_to_remove">Select Locations to Remove</string>
    <string name="select_trips_to_remove">Select Trips to Remove</string>
    <string name="settings">Settings</string>
    <string name="showdestination">Show Destination</string>
    <string name="show_compass">Show Compass</string>
    <string name="show_current_location">Show Current Location</string>
    <string name="show_destination">Show Destination</string>
    <string name="show_navigator">Show Navigator</string>
    <string name="size_label">Size:</string>
    <string name="smaller">Smaller</string>
    <string name="start_date">Start Date</string>
    <string name="start_trail">Start Trail</string>
    <string name="stop_trail">Stop Trail</string>
    <string name="swap_trip">Swap Trip</string>
    <string name="traffic">Traffic</string>
    <string name="transfer_location">Transfer Location</string>
    <string name="trip">Trip</string>
    <string name="trip_notes">Trip Notes</string>
    <string name="trip_options">Trip Options</string>
    <string name="unknown">Unknown</string>
    <string name="view_details">View Details</string>
    <string name="view_locations">View Locations</string>
    <string name="view_trips">View Trips</string>
    <string name="video_captured">Video captured.</string>
    <string name="video_header">Video:</string>
    <string name="when">When</string>
    <string name="yes">Yes</string>
</resources>
